--- a/infinite-scrolling/src/sass/main.scss
+++ b/infinite-scrolling/src/sass/main.scss
@@ -1,7 +1,24 @@
-.photos {
-  padding: 0;
+html {
+  font-size: 16px;
+}
+
+body {
   margin: 0;
-  &__photo {
-    list-style: none;
+  padding: 0;
+}
+
+.photo-list {
+  .photo-list__photos {
+    padding: 0;
+    .photos__photo {
+      list-style: none;
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .photos__load-more {
+    width: 100%;
+    height: 10rem;
   }
 }
