infinite-scrolling/feat: intersection observer API를 이용한 무한 스크롤 구현

--- a/infinite-scrolling/src/sass/main.scss
+++ b/infinite-scrolling/src/sass/main.scss
@@ -12,6 +12,7 @@ body {
     padding: 0;
     .photos__photo {
       list-style: none;
+      min-height: 500px;
       img {
         width: 100%;
       }
