--- a/search-bar/src/sass/main.scss
+++ b/search-bar/src/sass/main.scss
@@ -9,16 +9,17 @@ body {
   padding: 0;
 }
 
-.app {
+#app {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.app h1 {
+#app h1 {
   font-size: 4rem;
+  text-align: center;
 }
 
-.app .header {
+#app .header {
   display: flex;
   width: 800px;
   flex-direction: column;
