--- a/search-bar/src/sass/main.scss
+++ b/search-bar/src/sass/main.scss
@@ -2,8 +2,7 @@
   box-sizing: border-box;
 }
 
-html,
-body {
+html, body {
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -13,17 +12,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-#app h1 {
-  font-size: 4rem;
-  text-align: center;
-}
 
-#app .header {
-  display: flex;
-  width: 800px;
-  flex-direction: column;
-  justify-content: center;
+  h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
+
+  .header {
+    display: flex;
+    width: 800px;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .keyword {
@@ -43,27 +43,27 @@ body {
   width: 800px;
   border: 1px solid #ccc;
   border-radius: 5px;
-}
 
-.keywords li:hover {
-  cursor: pointer;
-  background-color: blue;
-  color: white;
-}
+  li:hover {
+    cursor: pointer;
+    background-color: blue;
+    color: white;
+  }
 
-.keywords .active {
-  background-color: blue;
-  color: white;
-}
+  .active {
+    background-color: blue;
+    color: white;
+  }
 
-.keywords ul {
-  padding: 0;
-  margin: 0;
-}
+  ul {
+    padding: 0;
+    margin: 0;
+  }
 
-.keywords li {
-  list-style: none;
-  padding-left: 10px;
+  li {
+    list-style: none;
+    padding-left: 10px;
+  }
 }
 
 .search-results {
