--- a/zoom-clone/src/views/home.pug
+++ b/zoom-clone/src/views/home.pug
@@ -19,6 +19,12 @@ html(lang="en")
         ul
 
       div#room
+        //- playsInline: 모바일 브라우저가 필요로하는 property.
+        //- article#my-stream
+        //-   video#my-face(autoplay, playsInline, width="400", height="400")
+        //-   button#mute-btn 음소거
+        //-   button#camera-btn 카메라 끄기
+        //- video#peer-face(autoplay, playsInline, width="400", height="400")
         h3
         ul 
         form#msg
@@ -26,3 +32,4 @@ html(lang="en")
           button 메시지 전송
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js")
+    script(src="/public/js/video.js")
